Add javadoc in eventeria-messaging-contract (#17)
- add javadoc
    - exclude classes for clear use
- polish sources codes
    - remove duplicate override
    - add EventeriaPropertiesLoader