@@ -18,10 +18,6 @@
 
 package com.navercorp.spring.boot.eventeria.initializer;
 
-import static java.util.stream.Collectors.toList;
-
-import java.io.IOException;
-import java.io.InputStream;
 import java.util.List;
 
 import org.slf4j.Logger;
@@ -32,10 +28,9 @@ import org.springframework.core.env.ConfigurableEnvironment;
 import org.springframework.util.StringUtils;
 
 import com.navercorp.eventeria.messaging.contract.meta.EventeriaBasePackagePropertyPath;
-import com.navercorp.eventeria.messaging.contract.meta.EventeriaProperties;
+import com.navercorp.eventeria.messaging.contract.meta.EventeriaPropertiesLoader;
 
 public class EventeriaPackagePropertyPostProcessor implements EnvironmentPostProcessor {
-	private static final String EVENTERIA_META_INF_PROPERTIES = "/META-INF/eventeria.properties";
 
 	private static final Logger LOG = LoggerFactory.getLogger(EventeriaPackagePropertyPostProcessor.class);
 
@@ -44,13 +39,13 @@ public class EventeriaPackagePropertyPostProcessor implements EnvironmentPostPro
 		String basePackagePath = EventeriaBasePackagePropertyPath.BASE_PACKAGE_PROPERTY_PATH;
 		this.checkAndSetProperty(environment, basePackagePath);
 
-		if (!StringUtils.hasLength(System.getProperty(basePackagePath)) && !this.hasMetaFile()) {
+		if (!StringUtils.hasLength(System.getProperty(basePackagePath)) && !EventeriaPropertiesLoader.exists()) {
 			List<String> packages = application.getAllSources().stream()
 				.filter(source -> source instanceof Class)
 				.map(source -> (Class<?>)source)
 				.map(Class::getPackage)
 				.map(Package::getName)
-				.collect(toList());
+				.toList();
 
 			if (packages.size() == 1) {
 				System.setProperty(basePackagePath, packages.get(0));
@@ -81,14 +76,6 @@ public class EventeriaPackagePropertyPostProcessor implements EnvironmentPostPro
 
 		if (StringUtils.hasLength(basePackage)) {
 			LOG.debug("Eventeria package property set. {} : {}", propertyPath, basePackage);
-		}
-	}
-
-	private boolean hasMetaFile() {
-		try (InputStream propertiesIs = EventeriaProperties.class.getResourceAsStream(EVENTERIA_META_INF_PROPERTIES)) {
-			return propertiesIs != null;
-		} catch (IOException e) {
-			return false;
 		}
 	}
 }
